RESOLVED FIXED184780
[GTK] fast/repaint/fixed-scale.html failing since r230479 "[TexMap] TextureMapperLayer unnecessarily duplicates state in GraphicsLayerTransform"
https://bugs.webkit.org/show_bug.cgi?id=184780
Summary [GTK] fast/repaint/fixed-scale.html failing since r230479 "[TexMap] TextureMa...
Miguel Gomez
Reported 2018-04-19 07:49:54 PDT
Attachments
Patch (2.97 KB, patch)
2018-04-25 05:15 PDT, Miguel Gomez
no flags
Miguel Gomez
Comment 1 2018-04-25 05:15:17 PDT
The problem is that the anchor point used in GraphicsLayerTransform was initialized to (0.5, 0.5, 0) when used for transformation calculations, but now that we don't use that class, it's being initialized to (0, 0, 0), causing some transformations to produce buggy results.
Miguel Gomez
Comment 2 2018-04-25 05:15:47 PDT
WebKit Commit Bot
Comment 3 2018-04-25 06:08:56 PDT
Comment on attachment 338720 [details] Patch Clearing flags on attachment: 338720 Committed r230991: <https://trac.webkit.org/changeset/230991>
WebKit Commit Bot
Comment 4 2018-04-25 06:08:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.