[GTK] fast/repaint/fixed-scale.html failing since r230479 "[TexMap] TextureMapperLayer unnecessarily duplicates state in GraphicsLayerTransform" https://bugs.webkit.org/show_bug.cgi?id=184780

Reviewed by Žan Doberšek.

Source/WebCore:

Initialize the anchorPoint to (0.5, 0.5, 0) in TextureMapperLayer::State.

Covered by existent tests.

* platform/graphics/texmap/TextureMapperLayer.h:

LayoutTests:

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/200462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230991 268f45cc-cd09-0410-ab3c-d52691b4dbfc